# EchoBoot---Python

./: CONTRIBUTING.md  LICENSE  Project Layout - High Level.txt  README.md  pre-commit-config.yaml  pyproject.toml
echoboot/: cli.py  config.py  logging.py  provenance.py
echoboot/core/: devices.py  fs.py  iso.py  menu.py  partitioning.py
echoboot/core/bootloaders/: refind.py
echoboot/gui/: app.py
workflows/: ci.yml  release.yml
