[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "echoboot"
version = "0.2.0"
description = "Trusted, auditable multiboot USB provisioner (rEFInd + Syslinux)"
authors = [{ name = "Mirrorborn Media" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "PySide6>=6.7",
  "psutil>=5.9",
  "pyyaml>=6.0",
  "requests>=2.32",
]

[project.scripts]
echoboot = "echoboot.cli:app"

[tool.hatch.build]
include = ["echoboot/**", "README.md", "LICENSE", "CONTRIBUTING.md"]
