[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "echoboot"
version = "0.0.1"
description = "Auditable toolchain for building secure multi-boot USBs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Mirrorborn Media / EchoTech", email = "n/a@example.com" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "requests>=2.32",
  "tqdm>=4.66",
  "platformdirs>=4.2",
]

[project.scripts]
echoboot = "echoboot.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B","SIM"]
